--- a/apis/auth/package.json
+++ b/apis/auth/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "chalk": "4.1.2",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "debug": "^4.3.4",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "helmet": "^6.0.1",
-    "lib": "*",
     "jsonwebtoken": "^9.0.0",
+    "lib": "*",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
     "node-fetch": "^3.2.10"
